--- a/front/src/App.css
+++ b/front/src/App.css
@@ -20,16 +20,17 @@ form {
 	max-width: 340px;
 	margin: 2vh auto;
 	text-align: left;
+	font-size: 14px;
 }
 
 label {
-
+	
 }
 
 input {
 	width: 100%;
 	height: 23px;
-	margin: 1vh auto 3vh auto;
+	margin: 1vh auto 4vh auto;
 	padding: 5px;
 	border: 1px solid lightgrey;
 	border-radius: 4px;
@@ -41,18 +42,19 @@ input:hover {
 	transition: 0.1s;
 }
 
-.authButton, .regButton {
+.auth-button, .reg-button {
 	width: 20%;
 	height: 35px;
+	margin: 3vh 0;
 	padding: 0;
 	background-color: #28a745;
 	border: none;
 	color: white;
-	font-size: 15px;
+	font-size: 14px;
 	vertical-align: middle;
 }
 
-.regPageButton, .authPageButton {
+.reg-page-button, .auth-page-button, .send-email-button, .reg-page-return-button {
 	display: block;
 	width: 50%;
 	height: 34px;
@@ -61,18 +63,34 @@ input:hover {
 	border: none;
 	text-align: left;
 	color: #28a745;
-	font-size: 15px;
+	font-size: 14px;
 }
 
-.regPageButton:hover, .authPageButton:hover {
+.reg-page-button:hover, .auth-page-button:hover, .send-email-button:hover, .reg-page-return-button:hover {
 	box-shadow: none;
 	text-decoration: underline;
 }
 
-.regButton {
+/*Reg page*/
+.reg-button {
 	width: 50%;
 }
 
-.authPageButton {
+/*Auth page*/
+.auth-page-button {
 	width: 60%;
 }
+
+/*EmailSent page*/
+.send-email-button, .reg-page-return-button {
+	margin: 2vh 0;
+	width: 100%;
+	text-align: center;
+}
+
+.text-container {
+	margin-bottom: 6vh;
+	line-height: 2.5vh;
+	font-size: 14px;
+}
+
